# Ahmed_krml_24625129

./: Makefile  README.md  pyproject.toml  requirements.txt  test.pypi.org.keyahmed.rtf
docs/: Makefile  conf.py  index.rst  make.bat
src/my_krml_24625129/data/: sets.py
tests/data/: test_sets.py
